[gd_scene load_steps=15 format=3 uid="uid://dj1trr2o1xcwm"]

[ext_resource type="Script" uid="uid://c24dxhjt6usx0" path="res://scenes/gui/MainViewNew.cs" id="1_eusrg"]
[ext_resource type="PackedScene" uid="uid://d3qfvfqhfh27b" path="res://scenes/SketchPad/sketch_pad.tscn" id="1_shjlp"]
[ext_resource type="Script" uid="uid://bfdue51xbcnh5" path="res://scenes/SketchPad/sketch_pad_main_view.gd" id="2_lkm7f"]
[ext_resource type="PackedScene" uid="uid://bgby4lprf5ps6" path="res://scenes/SketchPad/mesh_tool.tscn" id="3_5j6cq"]
[ext_resource type="PackedScene" uid="uid://b56fi06uicdqp" path="res://scenes/SketchPad/sketch_pad_export_tool.tscn" id="4_wb0gf"]
[ext_resource type="Theme" uid="uid://bqmeijdgg3vn7" path="res://assets/themes/button_theme.tres" id="5_ynwsr"]
[ext_resource type="PackedScene" uid="uid://jepahwvj3hmy" path="res://scenes/gui_components/button_no_focus.tscn" id="6_537f8"]
[ext_resource type="PackedScene" uid="uid://3drt5n08y3k" path="res://scenes/gui_components/kit_item_buttons.tscn" id="7_f58n2"]
[ext_resource type="Script" uid="uid://28r5qnn3dmld" path="res://scenes/gui_components/ViewLibraryButton.cs" id="9_ygj05"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5akto"]
bg_color = Color(0.00784314, 0.188235, 0.278431, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0, 0, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mbjkp"]
size = Vector2(137, 1094)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eusrg"]
size = Vector2(137, 1094)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ygj05"]
size = Vector2(1094, 137)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h5iah"]
size = Vector2(1094, 137)

[node name="MainViewNew" type="Node2D" node_paths=PackedStringArray("_menuView", "_worldObjectContainer")]
script = ExtResource("1_eusrg")
_menuView = NodePath("CanvasLayer/MenuView")
_worldObjectContainer = NodePath("WorldView/ObjectContainer")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="DrawingPanel" type="Panel" parent="CanvasLayer"]
anchors_preset = -1
anchor_right = 0.352
anchor_bottom = 1.0
offset_right = -0.200073
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_5akto")

[node name="DrawingPanelContainer" type="VBoxContainer" parent="CanvasLayer/DrawingPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/DrawingPanel/DrawingPanelContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="SubViewportContainer" type="SubViewportContainer" parent="CanvasLayer/DrawingPanel/DrawingPanelContainer/CenterContainer"]
custom_minimum_size = Vector2(510, 510)
layout_mode = 2
stretch = true
stretch_shrink = 2

[node name="SketchPad" parent="CanvasLayer/DrawingPanel/DrawingPanelContainer/CenterContainer/SubViewportContainer" node_paths=PackedStringArray("visible_layers", "unvisible_layers", "mesh_tool", "export_tool") instance=ExtResource("1_shjlp")]
transparent_bg = true
msaa_2d = 3
canvas_item_default_texture_filter = 0
size = Vector2i(255, 255)
script = ExtResource("2_lkm7f")
visible_layers = NodePath("VisibleLayers")
unvisible_layers = NodePath("HiddenLayers")
mesh_tool = NodePath("MeshTool")
export_tool = NodePath("SketchPadExportTool")

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/DrawingPanel/DrawingPanelContainer/CenterContainer/SubViewportContainer/SketchPad"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0.0605303, 0.0605303, 0.0605303, 1)

[node name="VisibleLayers" type="Node" parent="CanvasLayer/DrawingPanel/DrawingPanelContainer/CenterContainer/SubViewportContainer/SketchPad"]

[node name="HiddenLayers" type="Node" parent="CanvasLayer/DrawingPanel/DrawingPanelContainer/CenterContainer/SubViewportContainer/SketchPad"]

[node name="MeshTool" parent="CanvasLayer/DrawingPanel/DrawingPanelContainer/CenterContainer/SubViewportContainer/SketchPad" instance=ExtResource("3_5j6cq")]

[node name="SketchPadExportTool" parent="CanvasLayer/DrawingPanel/DrawingPanelContainer/CenterContainer/SubViewportContainer/SketchPad" instance=ExtResource("4_wb0gf")]
_savePath = "res://assets/exported/"

[node name="ButtonsMarginContainer" type="MarginContainer" parent="CanvasLayer/DrawingPanel/DrawingPanelContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/DrawingPanel/DrawingPanelContainer/ButtonsMarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Navigation" type="HBoxContainer" parent="CanvasLayer/DrawingPanel/DrawingPanelContainer/ButtonsMarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 16

[node name="MenuButton" type="Button" parent="CanvasLayer/DrawingPanel/DrawingPanelContainer/ButtonsMarginContainer/VBoxContainer/Navigation"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
theme = ExtResource("5_ynwsr")
text = "OPEN_MENU"

[node name="AddObjectButton" type="Button" parent="CanvasLayer/DrawingPanel/DrawingPanelContainer/ButtonsMarginContainer/VBoxContainer/Navigation"]
layout_mode = 2
size_flags_horizontal = 3
text = "ADD_OBJECT_BUTTON"

[node name="KitItemButtons" parent="CanvasLayer/DrawingPanel/DrawingPanelContainer/ButtonsMarginContainer/VBoxContainer" instance=ExtResource("7_f58n2")]
layout_mode = 2
size_flags_vertical = 3

[node name="btn_Draw" parent="CanvasLayer/DrawingPanel/DrawingPanelContainer/ButtonsMarginContainer/VBoxContainer/KitItemButtons/ButtonsContainer" index="0"]
tooltip_text = "BRUSH"

[node name="btn_Erase" parent="CanvasLayer/DrawingPanel/DrawingPanelContainer/ButtonsMarginContainer/VBoxContainer/KitItemButtons/ButtonsContainer" index="1"]
tooltip_text = "ERASE"

[node name="btn_Left" parent="CanvasLayer/DrawingPanel/DrawingPanelContainer/ButtonsMarginContainer/VBoxContainer/KitItemButtons/ButtonsContainer" index="3"]
tooltip_text = "UNDO"

[node name="btn_Right" parent="CanvasLayer/DrawingPanel/DrawingPanelContainer/ButtonsMarginContainer/VBoxContainer/KitItemButtons/ButtonsContainer" index="4"]
tooltip_text = "REDO"

[node name="btn_Clear" parent="CanvasLayer/DrawingPanel/DrawingPanelContainer/ButtonsMarginContainer/VBoxContainer/KitItemButtons/ButtonsContainer" index="5"]
tooltip_text = "CLEAR"

[node name="ViewLibraryButton" parent="CanvasLayer/DrawingPanel/DrawingPanelContainer/ButtonsMarginContainer/VBoxContainer" instance=ExtResource("6_537f8")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "VIEW_LIBRARY"
autowrap_mode = 2
script = ExtResource("9_ygj05")
_changeToSceneOnClick = "res://scenes/gui/library_view.tscn"

[node name="MenuView" type="ColorRect" parent="CanvasLayer"]
process_mode = 3
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.00784314, 0.00784314, 0.00784314, 0.588235)

[node name="MenuButtons" type="VBoxContainer" parent="CanvasLayer/MenuView"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -135.5
offset_top = -89.5
offset_right = 135.5
offset_bottom = 89.5
grow_horizontal = 2
grow_vertical = 2

[node name="BackToGameButton" type="Button" parent="CanvasLayer/MenuView/MenuButtons"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("5_ynwsr")
text = "BACK_TO_GAME"

[node name="SaveGameButton" type="Button" parent="CanvasLayer/MenuView/MenuButtons"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("5_ynwsr")
text = "SAVE_GAME"

[node name="BackToMenuButton" parent="CanvasLayer/MenuView/MenuButtons" instance=ExtResource("6_537f8")]
layout_mode = 2
size_flags_vertical = 3
text = "BACK_TO_MENU"
_changeToSceneOnClick = "res://scenes/gui/TitleView.tscn"

[node name="WorldView" type="Node2D" parent="."]
position = Vector2(600, 0)

[node name="Border" type="Node2D" parent="WorldView"]

[node name="BorderLeft" type="StaticBody2D" parent="WorldView/Border"]
position = Vector2(-105, 450)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldView/Border/BorderLeft"]
shape = SubResource("RectangleShape2D_mbjkp")

[node name="BorderRight" type="StaticBody2D" parent="WorldView/Border"]
position = Vector2(1068.5, 450.018)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldView/Border/BorderRight"]
shape = SubResource("RectangleShape2D_eusrg")

[node name="BorderUp" type="StaticBody2D" parent="WorldView/Border"]
position = Vector2(453, -68)
rotation = 1.5708
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldView/Border/BorderUp"]
rotation = 1.5708
shape = SubResource("RectangleShape2D_ygj05")

[node name="BorderDown" type="StaticBody2D" parent="WorldView/Border"]
position = Vector2(453, 968)
rotation = 1.5708
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldView/Border/BorderDown"]
rotation = 1.5708
shape = SubResource("RectangleShape2D_h5iah")

[node name="ObjectContainer" type="Node2D" parent="WorldView"]

[node name="SaveSuccessPopup" type="AcceptDialog" parent="."]
title = "SAVE_POPUP_TITLE"
position = Vector2i(643, 200)
size = Vector2i(314, 100)
dialog_text = "SAVE_POPUP_TEXT"

[connection signal="pressed" from="CanvasLayer/DrawingPanel/DrawingPanelContainer/ButtonsMarginContainer/VBoxContainer/Navigation/MenuButton" to="." method="_onOpenMenuButtonPressed"]
[connection signal="pressed" from="CanvasLayer/DrawingPanel/DrawingPanelContainer/ButtonsMarginContainer/VBoxContainer/Navigation/AddObjectButton" to="CanvasLayer/DrawingPanel/DrawingPanelContainer/CenterContainer/SubViewportContainer/SketchPad" method="_on_export_image_to_bmp"]
[connection signal="pressed" from="CanvasLayer/DrawingPanel/DrawingPanelContainer/ButtonsMarginContainer/VBoxContainer/KitItemButtons/ButtonsContainer/btn_Draw" to="CanvasLayer/DrawingPanel/DrawingPanelContainer/CenterContainer/SubViewportContainer/SketchPad" method="_on_btn_draw_pressed"]
[connection signal="pressed" from="CanvasLayer/DrawingPanel/DrawingPanelContainer/ButtonsMarginContainer/VBoxContainer/KitItemButtons/ButtonsContainer/btn_Erase" to="CanvasLayer/DrawingPanel/DrawingPanelContainer/CenterContainer/SubViewportContainer/SketchPad" method="_on_btn_erase_pressed"]
[connection signal="pressed" from="CanvasLayer/DrawingPanel/DrawingPanelContainer/ButtonsMarginContainer/VBoxContainer/KitItemButtons/ButtonsContainer/btn_Left" to="CanvasLayer/DrawingPanel/DrawingPanelContainer/CenterContainer/SubViewportContainer/SketchPad" method="_on_undo_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/DrawingPanel/DrawingPanelContainer/ButtonsMarginContainer/VBoxContainer/KitItemButtons/ButtonsContainer/btn_Right" to="CanvasLayer/DrawingPanel/DrawingPanelContainer/CenterContainer/SubViewportContainer/SketchPad" method="_on_redo_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/DrawingPanel/DrawingPanelContainer/ButtonsMarginContainer/VBoxContainer/KitItemButtons/ButtonsContainer/btn_Clear" to="CanvasLayer/DrawingPanel/DrawingPanelContainer/CenterContainer/SubViewportContainer/SketchPad" method="_on_clear_btn_pressed"]
[connection signal="ViewLibraryButtonPressed" from="CanvasLayer/DrawingPanel/DrawingPanelContainer/ButtonsMarginContainer/VBoxContainer/ViewLibraryButton" to="." method="SaveGameState"]
[connection signal="pressed" from="CanvasLayer/MenuView/MenuButtons/BackToGameButton" to="." method="_onOpenMenuButtonPressed"]
[connection signal="pressed" from="CanvasLayer/MenuView/MenuButtons/SaveGameButton" to="." method="_onSaveGameButtonPressed"]

[editable path="CanvasLayer/DrawingPanel/DrawingPanelContainer/ButtonsMarginContainer/VBoxContainer/KitItemButtons"]
